# Doflamingo

./: .bazelrc  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  Main.qml  WORKSPACE  configure.sh  databasemanager.cpp  databasemanager.h  debtwidget.cpp  debtwidget.h  incomewidget.cpp  incomewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: BUILD  CMakeLists.txt  database.rs  main.cpp  main.rs  salary.cpp  salary.h  salary.rs  wasm_backend.rs
src/lib/: database.rs  debt.rs  lib.rs  salary.rs  user.rs
tests/: test_debt.rs
ui/: app-window.slint  debt.slint  home.slint  salary.slint
ui/pages/: about.slint  debt.slint  expense.slint  home.slint  overview.slint  salary.slint
ui/widgets/: date_text.slint
