[package]
name = "Doflamingo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled"] }
slint = "1.9.0"
chrono = "0.4.39"
plotters = { version = "0.3.5", default-features = false, features = ["bitmap_backend", "surface_series", "fontconfig-dlopen", "ttf"] }
rfd = "0.15.1"

[build-dependencies]
slint-build = "1.8.0"

[[bin]]
name = "Doflamingo"
path = "src/main.rs"

[lib]
name = "Doflamingo"
path = "src/lib/lib.rs"
